# ComfyUI-Qwen-Omni

./: QwenOmni.py  pyproject.toml
